# Fractalinator

./: .gitignore  Cargo.toml
src/: main.rs
src/fractals/: julia.rs  mandelbrot.rs
src/interp/: cubic.rs
src/utils/: mod.rs  swatch.rs
